# GenY

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  init.cpp  typetableE.txt  typetableT.txt
backend/: backend.cpp  backend.h
define/: ast.cpp  ast.h  main.cpp  symtab.cpp  symtab.h  type.h
docs/GenY-doc/: grammar.md
frontend/: sysy.l  sysy.y
midend/: midend.cpp  midend.h
reference/: reference.md
src/: lex.cpp  lex.h
src/define/: ast.cpp  ast.h  symtab.cpp  symtab.h  type.h  util.h
src/frontend/: Makefile  lex.yy.c  main.c  main.cpp  symbol.h  sysy.l  sysy.tab.c  sysy.tab.h  sysy.y  sysy.ypp  test.sy  typedefine.h
src/frontend/frontend.dSYM/Contents/: Info.plist
src/frontend/frontend.dSYM/Contents/Resources/DWARF/: frontend
src/frontend/test/: front_test.cpp
